kubernetes/argo-cd/projects/nebius/production-hm/simple-krr-dashboard/environments/production/kubernetes-manifests/hm-simple-krr-dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-simple-krr-dashboard-ingress
  namespace: production-hm-simple-krr-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: krr.hongbomiao.com
  labels:
    app.kubernetes.io/name: simple-krr-dashboard
    app.kubernetes.io/part-of: production-hm-simple-krr-dashboard
spec:
  rules:
    - host: krr.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-krr-dashboard
                port:
                  number: 80
  tls:
    - hosts:
        - krr.hongbomiao.com
      secretName: hm-simple-krr-dashboard-certificate
